Deprecated calls modified